# Project-manager

./: .gitignore  BUILD_INSTRUCTIONS.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  STATUS.md  build-exe.bat  index.html  package-lock.json  package.json  project-manager.exe.lnk  quick-check.bat  tailwind.config.js  test-build.bat
src/: App.tsx  dateUtils.ts  index.css  store.ts  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Blockers.tsx  Dashboard.tsx  DateInput.tsx  GanttChart.tsx  TaskDetailsPanel.tsx  TaskTable.tsx
